--- a/crates/l2/.gitignore
+++ b/crates/l2/.gitignore
@@ -1,7 +1,7 @@
 .env*
 
 # Ignore all config files that doesn't end with _example.toml
-/configs
-!*_example.toml
+configs/config.toml
+configs/prover_client_config.toml
 
 solc_out
