--- a/.github/workflows/ci_l2.yaml
+++ b/.github/workflows/ci_l2.yaml
@@ -26,16 +26,21 @@ jobs:
       - name: Caching
         uses: Swatinem/rust-cache@v2
 
-      - name: Build prover
-        run: |
-          cd crates/l2
-          make build-prover T=sp1
-
       - name: Run L2 integration test
         run: |
           cd crates/l2
           cp configs/config_example.toml configs/config.toml
           make ci_test
+
+      - name: RISC-V SP1 toolchain install
+        run: |
+          curl -L https://sp1.succinct.xyz | bash
+          ~/.sp1/bin/sp1up --version 4.1.4
+
+      - name: Build prover
+        run: |
+          cd crates/l2
+          make build-prover T=sp1
 
       - name: Run L2 integration prover_client
         run: |
