--- a/crates/l2/docker-compose-l2.yaml
+++ b/crates/l2/docker-compose-l2.yaml
@@ -42,8 +42,8 @@ services:
     ports:
       # RPC
       - 127.0.0.1:1729:1729
-      # Proposer
-      - 3900:3900
+      # Prover Server
+      - 127.0.0.1:3900:3900
     environment:
       - ETH_RPC_URL=http://ethrex_l1:8545
       - ENV_FILE=/.env
