Fix help, rename config, improve error messages

--- a/.github/workflows/ci_l2.yaml
+++ b/.github/workflows/ci_l2.yaml
@@ -29,5 +29,5 @@ jobs:
       - name: Run L2 integration test
         run: |
           cd crates/l2
-          cp configs/config_example.toml configs/config.toml
+          cp configs/sequencer_config_example.toml configs/sequencer_config.toml
           make ci_test
