--- a/crates/l2/docker-compose-l2.yaml
+++ b/crates/l2/docker-compose-l2.yaml
@@ -14,7 +14,7 @@ services:
     volumes:
       # NOTE: CI_ETHREX_WORKDIR is defined in crates/l2/Makefile
       - ./contracts:${CI_ETHREX_WORKDIR}/contracts
-      - ./configs/config.toml:${CI_ETHREX_WORKDIR}/configs/config.toml
+      - ./configs/sequencer_config.toml:${CI_ETHREX_WORKDIR}/configs/sequencer_config.toml
       - ./.env:${CI_ETHREX_WORKDIR}/.env
       - ../../test_data/genesis-l1-dev.json:${CI_ETHREX_WORKDIR}/test_data/genesis-l1-dev.json
       - ../../test_data/private_keys_l1.txt:${CI_ETHREX_WORKDIR}/test_data/private_keys_l1.txt
@@ -50,7 +50,7 @@ services:
     volumes:
       - ../../test_data/genesis-l2.json:/genesis-l2.json
       - ./.env:/.env:ro
-      - ./config.toml:/config.toml:ro
+      - ./sequencer_config.toml:/sequencer_config.toml:ro
     command: --network /genesis-l2.json --http.addr 0.0.0.0 --http.port 1729 --authrpc.port 8552
     depends_on:
       contract_deployer:
