copy prover client config in ci job

--- a/.github/workflows/ci_l2.yaml
+++ b/.github/workflows/ci_l2.yaml
@@ -58,6 +58,7 @@ jobs:
         run: |
           cd crates/l2
           cp configs/config_docker_example.toml configs/config.toml
+          cp configs/prover_client_config_example.toml configs/prover_client_config.toml
 
           touch .env
           CI_ETHREX_WORKDIR=/usr/local/bin docker compose -f docker-compose-l2.yaml up --detach
