Rename prover client interval ms config to a more descriptive name

--- a/crates/l2/configs/prover_client_config_example.toml
+++ b/crates/l2/configs/prover_client_config_example.toml
@@ -1,6 +1,6 @@
 [prover_client]
 prover_server_endpoint = "localhost:3900"
-interval_ms = 5000
+proving_time_ms = 5000
 # mock, cpu, cuda
 sp1_prover = "mock"
 # 1 for dev_mode
