--- a/crates/vm/levm/bench/revm_comparison/Cargo.toml
+++ b/crates/vm/levm/bench/revm_comparison/Cargo.toml
@@ -9,6 +9,7 @@ path = "src/lib.rs"
 
 [dependencies]
 ethrex-levm = { path = "../../" }
+ethrex-vm.workspace = true
 ethrex-common.workspace = true
 hex.workspace = true
 bytes.workspace = true
