--- a/.github/workflows/ci_l2.yaml
+++ b/.github/workflows/ci_l2.yaml
@@ -67,4 +67,4 @@ jobs:
           cd crates/l2
           touch .env
           CI_ETHREX_WORKDIR=/usr/local/bin docker compose -f docker-compose-l2.yaml up --detach --build
-          RUST_LOG=info,ethrex_prover=debug make init-prover & cargo test prover_client --release -- --nocapture
+          RUST_LOG=info,ethrex_prover=debug make init-prover 2>&1 & cargo test prover_client --release -- --nocapture
