refactor: add loadtest.rs as binary

--- a/cmd/ethrex_l2/Cargo.toml
+++ b/cmd/ethrex_l2/Cargo.toml
@@ -39,3 +39,7 @@ sha2.workspace = true
 [[bin]]
 name = "ethrex_l2"
 path = "./src/main.rs"
+
+[[bin]]
+name = "loadtest"
+path = "./src/loadtest.rs"
