build(l2): Enable exec prover by default.

--- a/crates/l2/prover/Cargo.toml
+++ b/crates/l2/prover/Cargo.toml
@@ -46,6 +46,7 @@ name = "ethrex_prover"
 path = "src/main.rs"
 
 [features]
+default = ["exec"]
 # prover backends
 exec = []
 pico = ["zkvm_interface/pico", "dep:pico-sdk"]
