--- a/.github/workflows/ci_l2_prover.yaml
+++ b/.github/workflows/ci_l2_prover.yaml
@@ -17,8 +17,8 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        # backend: ["sp1", "risc0", "exec"] # TODO: fix Risc0 (https://github.com/lambdaclass/ethrex/issues/2145)
-        backend: ["sp1", "exec"]
+        # backend: ["sp1", "risc0", ""] # TODO: fix Risc0 (https://github.com/lambdaclass/ethrex/issues/2145)
+        backend: ["sp1", ""]
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
