--- a/.github/workflows/ci_l2_prover.yaml
+++ b/.github/workflows/ci_l2_prover.yaml
@@ -17,21 +17,32 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        # backend: ["sp1", "risc0", ""] # TODO: fix Risc0 (https://github.com/lambdaclass/ethrex/issues/2145)
-        backend: ["sp1", ""]
+        # backend: ["sp1", "risc0", "exec"] # TODO: fix Risc0 (https://github.com/lambdaclass/ethrex/issues/2145)
+        backend: ["sp1", "exec"]
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
       - name: Add Rust Cache
         uses: Swatinem/rust-cache@v2
       - name: RISC-V SP1 toolchain install
+        if: ${{ matrix.backend == 'sp1' }}
         run: |
           curl -L https://sp1.succinct.xyz | bash
           ~/.sp1/bin/sp1up --version 4.1.0
       - name: Check
-        run: cargo check -p ethrex-prover -F ${{ matrix.backend }}
+        run: |
+          if [ "${{ matrix.backend }}" == "exec" ]; then
+            cargo check -p ethrex-prover
+          else
+            cargo check -p ethrex-prover -F ${{ matrix.backend }}
+          fi
       - name: Clippy
-        run: cargo clippy -p ethrex-prover --all-targets -F ${{ matrix.backend }}
+        run: |
+          if [ "${{ matrix.backend }}" == "exec" ]; then
+            cargo clippy -p ethrex-prover --all-targets
+          else
+            cargo clippy -p ethrex-prover --all-targets -F ${{ matrix.backend }}
+          fi
 
   test:
     # "Test" is a required check, don't change the name
