--- a/.github/workflows/ci_l2_exec.yaml
+++ b/.github/workflows/ci_l2_exec.yaml
@@ -43,7 +43,7 @@ jobs:
       - name: Build prover
         run: |
           cd crates/l2
-          PROVER=exec make build-prover
+          make build-prover
 
       - name: Build test
         run: |
@@ -55,7 +55,7 @@ jobs:
           cp configs/prover_client_config_example.toml configs/prover_client_config.toml
           cp configs/sequencer_config_docker_example.toml configs/sequencer_config.toml
 
-          PROVER=exec make integration-test
+          make integration-test
 
   state-diff-test:
     # "State Reconstruction Tests" is a required check, don't change the name
