--- a/.github/workflows/ci_prover_nightly.yaml
+++ b/.github/workflows/ci_prover_nightly.yaml
@@ -1,5 +1,5 @@
 # The reason this exists is because the Pico zkVM compiles in nightly only.
-name: L2 Prover (nightly)
+name: Prover (nightly)
 on:
   push:
     branches: ["main"]
