--- a/crates/storage/Cargo.toml
+++ b/crates/storage/Cargo.toml
@@ -21,6 +21,7 @@ serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
 libmdbx = { workspace = true, optional = true }
 redb = { workspace = true, optional = true }
+reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
 
 [features]
 default = []
