--- a/.github/workflows/ci_l2_exec.yaml
+++ b/.github/workflows/ci_l2_exec.yaml
@@ -74,4 +74,7 @@ jobs:
       - name: Run tests
         run: |
           cd crates/l2
+          cp configs/prover_client_config_example.toml configs/prover_client_config.toml
+          cp configs/sequencer_config_docker_example.toml configs/sequencer_config.toml
+
           make state-diff-test
