build dev image before

--- a/crates/l2/Makefile
+++ b/crates/l2/Makefile
@@ -215,8 +215,7 @@ state-diff-test:
 	cargo run --release --manifest-path ../../cmd/ethrex_l2/Cargo.toml --bin ethrex_l2 -- config set ci
 	cargo run --release --manifest-path ../../cmd/ethrex_l2/Cargo.toml --bin ethrex_l2 -- stack reconstruct -g ../../test_data/genesis-l2.json -b ../../test_data/blobs/ -s $$PWD/store -c 0x0007a881CD95B1484fca47615B64803dad620C8d
 	cargo b --manifest-path ../../Cargo.toml --release
-	make down-l2
-	make init-l2-no-metrics ethrex_L2_DEV_LIBMDBX=$$PWD/store 2>&1 >/dev/null &
+	make restart ethrex_L2_DEV_LIBMDBX=$$PWD/store 2>&1 >/dev/null &
 	cargo test state_reconstruct --release
 
 # Purge L2's state
