--- a/.github/workflows/ci_l2_exec.yaml
+++ b/.github/workflows/ci_l2_exec.yaml
@@ -78,7 +78,7 @@ jobs:
         uses: docker/bake-action@v6
         with:
           workdir: "crates/l2"
-          files: "crates/blockchain/dev/docker-compose-dev.yaml"
+          files: "crates/blockchain/dev/docker-compose-dev.yaml, crates/blockchain/metrics/docker-compose-metrics-l1-dev.overrides.yaml"
           load: true
           set: |
             *.cache-to=type=gha,mode=max
