--- a/.github/workflows/ci_l2_exec.yaml
+++ b/.github/workflows/ci_l2_exec.yaml
@@ -77,7 +77,7 @@ jobs:
       - name: Bake docker images
         uses: docker/bake-action@v6
         with:
-          workdir: "crates/l2"
+          workdir: "crates/blockchain/dev"
           files: "crates/blockchain/dev/docker-compose-dev.yaml, crates/blockchain/metrics/docker-compose-metrics-l1-dev.overrides.yaml"
           load: true
           set: |
