add datadir env var

--- a/crates/l2/docker-compose-l2.yaml
+++ b/crates/l2/docker-compose-l2.yaml
@@ -50,7 +50,7 @@ services:
       - ../../test_data/genesis-l2.json:/genesis-l2.json
       - ./.env:/.env:ro
       - ./config.toml:/config.toml:ro
-    command: l2 init --network /genesis-l2.json --http.addr 0.0.0.0 --http.port 1729 --authrpc.port 8552
+    command: l2 init --network /genesis-l2.json --http.addr 0.0.0.0 --http.port 1729 --authrpc.port 8552 --datadir $$DATADIR
     depends_on:
       contract_deployer:
         condition: service_completed_successfully
