--- a/.github/workflows/check_readme_cli.yaml
+++ b/.github/workflows/check_readme_cli.yaml
@@ -8,6 +8,10 @@ on:
       - 'README.md'
       - '.github/workflows/check_readme_cli.yml'
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
+
 jobs:
   check-cli-help:
     name: Verify README CLI Help Consistency
