--- a/.github/workflows/ci_l2_exec.yaml
+++ b/.github/workflows/ci_l2_exec.yaml
@@ -13,10 +13,29 @@ env:
   CI_ETHREX_WORKDIR: /usr/local/bin
 
 jobs:
+  docker-bake:
+    steps:
+      - name: Checkout sources
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Bake docker images
+        uses: docker/bake-action@v6
+        with:
+          workdir: "crates/l2"
+          files: "crates/l2/docker-compose-l2.yaml"
+          load: true
+          set: |
+            *.cache-to=type=gha,mode=max
+            *.cache-from=type=gha
+
   integration-test:
     # "Integration Test" is a required check, don't change the name
     name: Integration Test
     runs-on: ubuntu-latest
+    needs: [docker-bake]
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
@@ -61,6 +80,7 @@ jobs:
     # "State Reconstruction Tests" is a required check, don't change the name
     name: State Reconstruction Tests
     runs-on: ubuntu-latest
+    needs: [docker-bake]
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
