--- a/.github/workflows/ci_l2_exec.yaml
+++ b/.github/workflows/ci_l2_exec.yaml
@@ -14,6 +14,7 @@ env:
 
 jobs:
   docker-bake:
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
