Trigger job for every change inside ethrex cmd.

--- a/.github/workflows/check_readme_cli.yaml
+++ b/.github/workflows/check_readme_cli.yaml
@@ -3,8 +3,7 @@ name: Check README CLI Help
 on:
   pull_request:
     paths:
-      - 'cmd/ethrex/cli.rs'
-      - 'cmd/ethrex/Cargo.toml'
+      - 'cmd/ethrex/**'
       - 'README.md'
       - '.github/workflows/check_readme_cli.yml'
 
