--- a/.github/workflows/ci_l2_exec.yaml
+++ b/.github/workflows/ci_l2_exec.yaml
@@ -28,7 +28,7 @@ jobs:
         with:
           workdir: "crates/l2"
           files: "crates/l2/docker-compose-l2.yaml"
-          load: true
+          push: true
           set: |
             *.cache-to=type=gha,mode=max
             *.cache-from=type=gha
@@ -47,6 +47,19 @@ jobs:
 
       - name: Set up Rust cache
         uses: Swatinem/rust-cache@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Bake docker images
+        uses: docker/bake-action@v6
+        with:
+          workdir: "crates/l2"
+          files: "crates/l2/docker-compose-l2.yaml"
+          load: true
+          set: |
+            *.cache-to=type=gha,mode=max
+            *.cache-from=type=gha
 
       - name: Build prover
         run: |
@@ -76,6 +89,19 @@ jobs:
 
       - name: Rustup toolchain install
         uses: dtolnay/rust-toolchain@stable
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Bake docker images
+        uses: docker/bake-action@v6
+        with:
+          workdir: "crates/l2"
+          files: "crates/l2/docker-compose-l2.yaml"
+          load: true
+          set: |
+            *.cache-to=type=gha,mode=max
+            *.cache-from=type=gha
 
       - name: Set up Rust cache
         uses: Swatinem/rust-cache@v2
