refactor: add README and improvements

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
   "cmd/ethrex",
   "cmd/ethrex_l2",
   "cmd/hive_report",
+  "cmd/load_test",
   "cmd/loc",
   "crates/blockchain",
   "crates/blockchain/dev",
