--- a/.github/workflows/ci_l2_proving.yaml
+++ b/.github/workflows/ci_l2_proving.yaml
@@ -2,6 +2,8 @@ name: L2 (SP1 Backend)
 on:
   push:
     branches: ["main"]
+  pull_request:
+    branches: ["**"]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
