--- a/.github/workflows/pr-main_l2_prover_nightly.yaml
+++ b/.github/workflows/pr-main_l2_prover_nightly.yaml
@@ -5,6 +5,8 @@ on:
     branches: ["main"]
   pull_request:
     branches: ["**"]
+    paths:
+      - "crates/l2/prover/**"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
