--- a/.github/workflows/pr_lint_pr_title.yml
+++ b/.github/workflows/pr_lint_pr_title.yml
@@ -1,4 +1,4 @@
-name: Lint PR title
+name: PR title
 
 on:
   pull_request_target:
@@ -11,8 +11,8 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  main:
-    name: Validate PR title
+  validate:
+    name: Validate
     runs-on: ubuntu-latest
     steps:
       - uses: amannn/action-semantic-pull-request@v5
