Make sure job is run when workflow file changes.

--- a/.github/workflows/pr-main_l2_prover.yaml
+++ b/.github/workflows/pr-main_l2_prover.yaml
@@ -6,6 +6,7 @@ on:
     branches: ["**"]
     paths:
       - "crates/l2/prover/**"
+      - ".github/workflows/pr-main_l2_prover.yaml"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
