--- a/.github/workflows/pr-main_l2_contracts.yaml
+++ b/.github/workflows/pr-main_l2_contracts.yaml
@@ -6,6 +6,7 @@ on:
     branches: ["**"]
     paths:
       - "crates/l2/contracts/**"
+      - ".github/workflows/pr-main_l2_contracts.yaml"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
