--- a/.github/workflows/pr-main_l2_prover_nightly.yaml
+++ b/.github/workflows/pr-main_l2_prover_nightly.yaml
@@ -7,6 +7,7 @@ on:
     branches: ["**"]
     paths:
       - "crates/l2/prover/**"
+      - ".github/workflows/pr-main_l2_prover_nightly.yaml"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
