--- a/.github/workflows/pr-main_levm.yaml
+++ b/.github/workflows/pr-main_levm.yaml
@@ -7,6 +7,7 @@ on:
     branches: ["**"]
     paths:
       - "crates/vm/levm/**"
+      - ".github/workflows/pr-main_levm.yaml"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
