Fix new workflow.

--- a/.github/workflows/pr_lint_gha.yaml
+++ b/.github/workflows/pr_lint_gha.yaml
@@ -4,6 +4,7 @@ on:
     branches: ["**"]
     paths:
       - ".github/**.yaml"
+      - ".github/*.yml"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
