--- a/.github/workflows/ci_l2_exec.yaml
+++ b/.github/workflows/ci_l2_exec.yaml
@@ -29,8 +29,8 @@ jobs:
           workdir: "crates/l2"
           files: "crates/l2/docker-compose-l2.yaml"
           set: |
-            *.cache-to=type=local,dest=/tmp/buildx-cache,mode=max
-            *.cache-from=type=gha
+            ethrex_l2.cache-to=type=local,dest=/tmp/ethrex_l2-docker-cache,mode=max
+            contract_deployer.cache-to=type=local,dest=/tmp/contract_deployer-docker-cache,mode=max
 
       - name: Upload docker artifacts
         uses: actions/upload-artifact@v4
@@ -69,7 +69,8 @@ jobs:
           files: "crates/l2/docker-compose-l2.yaml"
           load: true
           set: |
-            *.cache-from=type=local,src=/tmp/buildx-cache
+            ethrex_l2.cache-from=type=local,dest=/tmp/ethrex_l2-docker-cache
+            contract_deployer.cache-from=type=local,dest=/tmp/contract_deployer-docker-cache
 
       - name: Build prover
         run: |
@@ -116,7 +117,8 @@ jobs:
           files: "crates/l2/docker-compose-l2.yaml"
           load: true
           set: |
-            *.cache-from=type=local,src=/tmp/buildx-cache
+            ethrex_l2.cache-from=type=local,dest=/tmp/ethrex_l2-docker-cache
+            contract_deployer.cache-from=type=local,dest=/tmp/contract_deployer-docker-cache
 
       - name: Set up Rust cache
         uses: Swatinem/rust-cache@v2
